<resources>
    <string name="app_name">ByblosLogin</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Don\'t have an Account yet?</string>
    <string name="action_registerPage">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_have_account">Already have an account?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="delete_user">Delete User?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_user_instructions">Tap and Hold on a User to Delete</string>
    <string name="add_service_prompt">Add the Fields that will be Required for this New Service</string>
    <string name="add_a_field_prompt">+ Add a Field</string>
    <string name="services_layout_instructions">Tap and Hold on a Service to View, Edit, or Remove</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_new_service">Add a New Service</string>
</resources>